<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/video_pane_vertical_margin"
    android:layout_marginLeft="@dimen/video_pane_horizontal_margin"
    android:layout_marginRight="@dimen/video_pane_horizontal_margin"
    android:layout_marginTop="@dimen/video_pane_vertical_margin">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <TextView
        android:id="@+id/tv_step_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="@dimen/desc_size"
        android:padding="@dimen/desc_padding"/>

    <Button
        android:id="@+id/button_next_step"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/next_button_text"
        android:layout_weight="1"/>

</LinearLayout>