...
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/recyclerview_marginLeft"
                android:layout_marginRight="@dimen/recyclerview_marginRight" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_steps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/steps_margin"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="@dimen/steps_padding">
...
                android:text="@string/steps_sub_heading"
                android:textSize="@dimen/steps_subheading_size"
                android:textStyle="italic"
                tools:text="@string/steps_sub_heading" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/recyclerview_marginLeft"
                android:layout_marginRight="@dimen/recyclerview_marginRight"
                android:background="@drawable/thin_border" />

...
