<?xml version="1.0" encoding="utf-8"?>
<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_step_fragment"
    android:name="com.example.android.bakewithmiriam.StepDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

